Refrac: dark mode fix

--- a/src/App.css
+++ b/src/App.css
@@ -128,4 +128,7 @@ h3 {
     margin-bottom: 2em;
 }
 
-/* header */
+/* dark mode */
+.dark {
+    background-color: var(--clr-dark-bg);
+}
